force-app/main/default/objects/Promoter_Cost__c/Promoter_Cost__c.object-meta.xml
<CustomObject>
    <label>Promoter Cost</label>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Promoter Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>