force-app/main/default/objects/Promoter_Cost__c/fields/Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount__c</fullName>
    <label>Additional Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>