force-app/main/default/objects/Promoter_Cost__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <formula>&apos;&apos;</formula>
    <label>Channel Code</label>
    <type>Text</type>
</CustomField>