force-app/main/default/objects/Promoter_Cost__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <label>Departure Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>