force-app/main/default/objects/Promoter_Cost__c/fields/Employment_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_Date__c</fullName>
    <label>Employment Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>