force-app/main/default/objects/Promoter_Cost__c/fields/Promoter__c.field-meta.xml
<CustomField>
    <fullName>Promoter__c</fullName>
    <label>Promoter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>