force-app/main/default/objects/Promoter_Cost__c/fields/Promoter_Email__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Email__c</fullName>
    <label>Promoter Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>