force-app/main/default/objects/Promoter_Cost__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>